--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="./Onethrive tab logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- Satoshi font from CDN -->
-    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap" rel="stylesheet">
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="OneThrive - Building Digital Experiences that Thrive" />
-    <meta name="keywords" content="OneThrive, Web Development, UI/UX, React, Vite, Tailwind" />
-    <meta name="author" content="OneThrive Team" />
+    <!-- 🔗 Favicon & Tab Logo -->
+    <link rel="icon" href="/Onethrive tab logo.png" type="image/png" />
 
-    <!-- Title -->
-    <title>OneThrive</title>
+    <!-- ✅ Title -->
+    <title>One Thrive | Employee Engagement & Team Building</title>
 
-    <!-- Fonts (Optional - Example: Inter) -->
+    <!-- ✅ Meta Description -->
+    <meta name="description" content="One Thrive brings disconnected workplaces to life through personalized employee engagement, team-building experiences, and corporate wellness programs that uplift morale and fuel innovation." />
+
+    <!-- ✅ Keywords -->
+    <meta name="keywords" content="One Thrive, employee engagement, team building, workplace culture, retreats, corporate wellness, HR events, leadership training, mindfulness workshops" />
+    <meta name="author" content="One Thrive Team" />
+
+    <!-- ✅ Open Graph Tags for Social Sharing -->
+    <meta property="og:title" content="One Thrive | Purposeful Employee Engagement & Team Building" />
+    <meta property="og:description" content="Transform your workplace culture with One Thrive's engaging programs. From offsite retreats to wellness events, we craft meaningful experiences that drive collaboration and well-being." />
+    <meta property="og:image" content="https://onethrive.in/og-image.png" />
+    <meta property="og:url" content="https://onethrive.in/" />
+    <meta property="og:type" content="website" />
+
+    <!-- ✅ Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="One Thrive | Purposeful Employee Engagement & Team Building" />
+    <meta name="twitter:description" content="Crafting personalized experiences that inspire connected, happy teams." />
+    <meta name="twitter:image" content="https://onethrive.in/og-image.png" />
+
+    <!-- ✅ Fonts -->
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   </head>
+
   <body class="text-white font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
