--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/Onethrive tab logo.png" type="image/png" />
 
     <!-- ✅ Title -->
-    <title>One Thrive | Employee Engagement & Team Building</title>
+    <title>OneThrive - Employee Engagement & Team Building</title>
 
     <!-- ✅ Meta Description -->
     <meta name="description" content="One Thrive brings disconnected workplaces to life through personalized employee engagement, team-building experiences, and corporate wellness programs that uplift morale and fuel innovation." />
