--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
     <title>OneThrive - Employee Engagement & Team Building</title>
 
     <!-- ✅ Meta Description -->
-    <meta name="description" content="One Thrive brings disconnected workplaces to life through personalized employee engagement, team-building experiences, and corporate wellness programs that uplift morale and fuel innovation." />
+    <meta name="description" content="OneThrive brings disconnected workplaces to life through personalized employee engagement, team-building experiences, and corporate wellness programs that uplift morale and fuel innovation." />
 
     <!-- ✅ Keywords -->
-    <meta name="keywords" content="One Thrive, employee engagement, team building, workplace culture, retreats, corporate wellness, HR events, leadership training, mindfulness workshops" />
-    <meta name="author" content="One Thrive Team" />
+    <meta name="keywords" content="OneThrive, employee engagement, team building, workplace culture, retreats, corporate wellness, HR events, leadership training, mindfulness workshops" />
+    <meta name="author" content="OneThrive Team" />
 
     <!-- ✅ Open Graph Tags for Social Sharing -->
-    <meta property="og:title" content="One Thrive | Purposeful Employee Engagement & Team Building" />
-    <meta property="og:description" content="Transform your workplace culture with One Thrive's engaging programs. From offsite retreats to wellness events, we craft meaningful experiences that drive collaboration and well-being." />
+    <meta property="og:title" content="OneThrive | Purposeful Employee Engagement & Team Building" />
+    <meta property="og:description" content="Transform your workplace culture with OneThrive's engaging programs. From offsite retreats to wellness events, we craft meaningful experiences that drive collaboration and well-being." />
     <meta property="og:image" content="https://onethrive.in/og-image.png" />
     <meta property="og:url" content="https://onethrive.in/" />
     <meta property="og:type" content="website" />
 
     <!-- ✅ Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="One Thrive | Purposeful Employee Engagement & Team Building" />
+    <meta name="twitter:title" content="OneThrive - Employee Engagement & Team Building" />
     <meta name="twitter:description" content="Crafting personalized experiences that inspire connected, happy teams." />
     <meta name="twitter:image" content="https://onethrive.in/og-image.png" />
 
