--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- 🔗 Favicon & Tab Logo -->
+    <!-- ✅ Favicon for tab and search engine -->
     <link rel="icon" href="/Onethrive tab logo.png" type="image/png" />
 
     <!-- ✅ Title -->
@@ -17,10 +17,10 @@
     <meta name="keywords" content="OneThrive, employee engagement, team building, workplace culture, retreats, corporate wellness, HR events, leadership training, mindfulness workshops" />
     <meta name="author" content="OneThrive Team" />
 
-    <!-- ✅ Open Graph Tags for Social Sharing -->
-    <meta property="og:title" content="OneThrive | Purposeful Employee Engagement & Team Building" />
+    <!-- ✅ Open Graph for social media -->
+    <meta property="og:title" content="OneThrive - Employee Engagement & Team Building" />
     <meta property="og:description" content="Transform your workplace culture with OneThrive's engaging programs. From offsite retreats to wellness events, we craft meaningful experiences that drive collaboration and well-being." />
-    <meta property="og:image" content="https://onethrive.in/og-image.png" />
+    <meta property="og:image" content="https://onethrive.in/Onethrive%20tab%20logo.png" />
     <meta property="og:url" content="https://onethrive.in/" />
     <meta property="og:type" content="website" />
 
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="OneThrive - Employee Engagement & Team Building" />
     <meta name="twitter:description" content="Crafting personalized experiences that inspire connected, happy teams." />
-    <meta name="twitter:image" content="https://onethrive.in/og-image.png" />
+    <meta name="twitter:image" content="https://onethrive.in/Onethrive%20tab%20logo.png" />
 
     <!-- ✅ Fonts -->
     <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap" rel="stylesheet" />
