--- a/index.html
+++ b/index.html
@@ -11,34 +11,77 @@
     <title>OneThrive - Employee Engagement & Team Building</title>
 
     <!-- ✅ Meta Description -->
-    <meta name="description" content="OneThrive brings disconnected workplaces to life through personalized employee engagement, team-building experiences, and corporate wellness programs that uplift morale and fuel innovation." />
+    <meta
+      name="description"
+      content="OneThrive brings disconnected workplaces to life through personalized employee engagement, team-building experiences, and corporate wellness programs that uplift morale and fuel innovation."
+    />
 
     <!-- ✅ Keywords -->
-    <meta name="keywords" content="OneThrive, employee engagement, team building, workplace culture, retreats, corporate wellness, HR events, leadership training, mindfulness workshops" />
+    <meta
+      name="keywords"
+      content="OneThrive, employee engagement, team building, workplace culture, retreats, corporate wellness, HR events, leadership training, mindfulness workshops"
+    />
     <meta name="author" content="OneThrive Team" />
 
     <!-- ✅ Open Graph for social media -->
-    <meta property="og:title" content="OneThrive - Employee Engagement & Team Building" />
-    <meta property="og:description" content="Transform your workplace culture with OneThrive's engaging programs. From offsite retreats to wellness events, we craft meaningful experiences that drive collaboration and well-being." />
-    <meta property="og:image" content="https://onethrive.in/Onethrive%20tab%20logo.png" />
+    <meta
+      property="og:title"
+      content="OneThrive - Employee Engagement & Team Building"
+    />
+    <meta
+      property="og:description"
+      content="Transform your workplace culture with OneThrive's engaging programs. From offsite retreats to wellness events, we craft meaningful experiences that drive collaboration and well-being."
+    />
+    <meta
+      property="og:image"
+      content="https://onethrive.in/Onethrive%20tab%20logo.png"
+    />
     <meta property="og:url" content="https://onethrive.in/" />
     <meta property="og:type" content="website" />
 
     <!-- ✅ Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="OneThrive - Employee Engagement & Team Building" />
-    <meta name="twitter:description" content="Crafting personalized experiences that inspire connected, happy teams." />
-    <meta name="twitter:image" content="https://onethrive.in/Onethrive%20tab%20logo.png" />
-    
+    <meta
+      name="twitter:title"
+      content="OneThrive - Employee Engagement & Team Building"
+    />
+    <meta
+      name="twitter:description"
+      content="Crafting personalized experiences that inspire connected, happy teams."
+    />
+    <meta
+      name="twitter:image"
+      content="https://onethrive.in/Onethrive%20tab%20logo.png"
+    />
+
     <!-- ✅ Fonts -->
-    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=satoshi@400,500,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="text-white font-sans">
     <div id="root"></div>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CY6NXBBJ9F"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-CY6NXBBJ9F");
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
